--- a/src/RightTurn.Extensions.CommandLine/RightTurn.Extensions.CommandLine.csproj
+++ b/src/RightTurn.Extensions.CommandLine/RightTurn.Extensions.CommandLine.csproj
@@ -25,7 +25,7 @@
   <ItemGroup>
     <PackageReference Include="RightTurn" Version="0.1.0" />
     <PackageReference Include="CommandLineParser" Version="2.8.0" />
-    <PackageReference Include="GitVersionTask" Version="5.5.1">
+    <PackageReference Include="GitVersion.MsBuild" Version="5.6.7">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
