--- a/src/RightTurn.Extensions.CommandLine/RightTurn.Extensions.CommandLine.csproj
+++ b/src/RightTurn.Extensions.CommandLine/RightTurn.Extensions.CommandLine.csproj
@@ -23,7 +23,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="RightTurn" Version="0.1.0" />
+    <PackageReference Include="RightTurn" Version="0.2.0-alpha.4" />
     <PackageReference Include="CommandLineParser" Version="2.8.0" />
     <PackageReference Include="GitVersion.MsBuild" Version="5.6.7">
       <PrivateAssets>all</PrivateAssets>
