--- a/src/RightTurn.Extensions.CommandLine/RightTurn.Extensions.CommandLine.csproj
+++ b/src/RightTurn.Extensions.CommandLine/RightTurn.Extensions.CommandLine.csproj
@@ -12,6 +12,7 @@
     <Description>Provides CommandLineParser extensions for RightTurn start-up container.</Description>
     <PackageTags>right turn start-up container application main logging configuration exceptions commandline command line</PackageTags>
     <RepositoryUrl>https://github.com/Jandini/RightTurn.Extensions.CommandLine</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/Jandini/RightTurn.Extensions.CommandLine</PackageProjectUrl>    
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -23,7 +24,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="RightTurn" Version="0.2.0-alpha.4" />
+    <PackageReference Include="RightTurn" Version="0.2.0" />
     <PackageReference Include="CommandLineParser" Version="2.8.0" />
     <PackageReference Include="GitVersion.MsBuild" Version="5.6.7">
       <PrivateAssets>all</PrivateAssets>
